--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,982 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=lato:wght@400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap");
+
+* {
+  box-sizing: border-box;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+}
+
+body {
+  background-image: url("http://layerdrops.com/sooper/image/banner.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-size: cover;
+  line-height: 1.6;
+  font-weight: 300;
+  font-family: "Lato", sans-serif;
+  color: #777;
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+/* Navber */
+.header {
+  padding: 2rem 3rem;
+  height: 5rem;
+  position: relative;
+  z-index: 100;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.nav--user {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1 80%;
+  flex: 0 1 80%;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  text-align: end;
+}
+
+.nav--tours {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1 80%;
+  flex: 0 1 40%;
+}
+@media only screen and (max-width: 62.5em) {
+  .nav--tours {
+    margin-bottom: 1.5rem;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .nav--tours {
+    margin-bottom: 0;
+  }
+  .header {
+    padding: 2rem 2rem;
+  }
+}
+
+.nav__el,
+.nav__el:link,
+.nav__el:visited {
+  color: #f7f7f7;
+  text-transform: uppercase;
+  font-size: 1.3rem;
+  text-decoration: none;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  font-weight: 100;
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+}
+.nav__el:hover,
+.nav__el:active {
+  -webkit-transform: translateY(-2px);
+  transform: translateY(-2px);
+  text-shadow: 0 0.7rem 1rem black;
+}
+.nav__el:not(:last-child) {
+  margin-right: 3rem;
+}
+@media only screen and (max-width: 37.5em) {
+  .nav__el:not(:last-child) {
+    margin-right: 1rem;
+  }
+}
+.nav__el:focus {
+  outline: none;
+}
+
+.nav__user-img {
+  height: 2.5rem;
+  width: 2.5rem;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+
+.header__logo img {
+  height: 3.5rem;
+}
+@media only screen and (max-width: 62.5em) {
+  .header__logo {
+    -webkit-box-ordinal-group: 0;
+    -ms-flex-order: -1;
+    order: -1;
+    margin-bottom: 1.5rem;
+  }
+}
+
+/* Alert message */
+.alert--success {
+  background-color: #20bf6b;
+  visibility: visible;
+}
+.alert--error {
+  background-color: #eb4d4b;
+  visibility: visible;
+}
+
+.floating-alert {
+  display: none;
+  position: absolute;
+  z-index: 999;
+  color: #fff;
+  top: 38px;
+  left: 50%;
+  transform: translateX(-50%);
+  -moz-animation: floatingAlert ease-in 3s forwards;
+  -webkit-animation: floatingAlert ease-in 3s forwards;
+  -o-animation: floatingAlert ease-in 3s forwards;
+  animation: floatingAlert ease-in 3s forwards;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+}
+
+.floating-alerts .floating-alert:last-of-type {
+  display: block;
+}
+
+@keyframes floatingAlert {
+  0% {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateX(-50%) scale(1.2);
+  }
+
+  19% {
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(-50%) scale(1);
+  }
+
+  81% {
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(-50%) scale(1);
+  }
+
+  100% {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateX(-50%) scale(1.2);
+  }
+}
+
+@-webkit-keyframes floatingAlert {
+  0% {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateX(-50%) scale(1.2);
+  }
+
+  19% {
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(-50%) scale(1);
+  }
+
+  81% {
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(-50%) scale(1);
+  }
+
+  100% {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateX(-50%) scale(1.2);
+  }
+}
+
+/* Register css */
+
+.reg {
+  padding: 0.6rem 1.75rem !important;
+}
+
+.form_item {
+  margin-bottom: 0.8rem !important;
+}
+
+/* Login css */
+
+.row {
+  margin: 0 0;
+}
+
+.form_details {
+  /* max-height: 100%; */
+  background-color: #fff;
+  max-width: 420px;
+  margin: 0 auto;
+  /* margin-top: auto; */
+  padding: 20px 20px;
+  -webkit-box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+}
+
+.para {
+  color: gray;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.btn {
+  width: 150px;
+  border-radius: 10px;
+  background-color: #f8f8f8;
+  color: #3a3161;
+  border: 1px solid #3a3161;
+  font-weight: 600;
+  font-size: 16px;
+  margin-bottom: 20px;
+  margin-left: 100px;
+  transform: translateX(10%);
+  transition: 0.5s all;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btn:hover {
+  background-color: #3a3161;
+  color: #f8f8f8;
+  border-color: #ffffff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.btn > img {
+  width: 15px;
+  height: 15px;
+  margin: auto;
+  margin-left: 10px;
+  justify-content: center;
+}
+
+@media only screen and (max-width: 430px) {
+  .form_details {
+    max-width: 320px;
+  }
+
+  .btn {
+    transform: translateX(-20%);
+  }
+
+  .header__logo img {
+    height: 3rem;
   }
 }
 
-.App-header {
-  background-color: #282c34;
+h4 {
+  margin-top: 15px;
+  font-weight: 600;
+  color: #070928;
+}
+
+.right_span {
+  cursor: pointer;
+  text-align: end;
+  margin-top: 10px;
+  font-size: 0.8rem;
+}
+
+.right_span span:hover {
+  text-decoration: underline;
+}
+
+.separate {
+  display: flex;
+  flex-direction: row;
+  color: grey;
+}
+.separate:before,
+.separate:after {
+  content: "";
+  flex: 1;
+  border-bottom: 1px solid;
+  margin: auto;
+}
+.separate:before {
+  margin-right: 2px;
+}
+.separate:after {
+  margin-left: 2px;
+}
+
+.form__input {
+  display: block;
+  font-family: inherit;
+  font-size: 1rem;
+  color: inherit;
+  padding: 1rem 1.75rem;
+  border: none;
+  width: 100%;
+  background-color: #fff;
+  background-color: #f2f2f2;
+  border-top: 3px solid transparent;
+  border-bottom: 3px solid transparent;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  /* Pseudo element (a visible thing that isn't really in the DOM).
+      Also needs -ms- */
+}
+.form__input:focus {
+  outline: none;
+  border-bottom: 3px solid #55c57a;
+}
+.form__input:focus:invalid {
+  border-bottom: 3px solid rgb(238, 16, 16);
+}
+.form__input::-webkit-input-placeholder {
+  color: #bbb;
+}
+
+.form__group:not(:last-child) {
+  margin-bottom: 1.5rem;
+}
+
+.form__label {
+  display: block;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #333;
+}
+
+/* Landing Page */
+
+.landing-main {
+  color: #fff;
+}
+
+.landing-main .row {
   min-height: 100vh;
+  padding: 50px 0 0 0;
+}
+
+.landing-header {
+  padding-top: 5vh;
+  height: 25vh;
+}
+
+.landing-header img {
+  height: 5rem;
+  margin: 0 50px;
+}
+
+.landing-header h1 {
+  font-size: 4vw;
+}
+
+.landing-main .row .col-lg-5 {
+  padding: 0 0 0 5vw;
+  padding-top: 7vw;
+}
+
+.landing-main h6 {
+  font-size: 20px;
+  padding-top: 5%;
+  color: #9789ac;
+}
+
+.landing-main .btn {
+  transform: translateX(0%);
+  background-color: #fb527a;
+  color: #fff;
+  font-weight: 600 !important;
+  /* margin-left: 24%; */
+  font-size: 14px;
+  display: inline-block;
+  padding: 12px 12px;
+  margin-top: 14%;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+  cursor: pointer;
+}
+
+@media (max-width: 750px) {
+  .landing-main .row h1 {
+    font-size: 3.4vw;
+  }
+  .landing-main .row h6 {
+    font-size: 2.4vw;
+  }
+}
+@media (max-width: 570px) {
+  .landing-main .row h1 {
+    font-size: 37px;
+  }
+  .landing-main .row h6 {
+    font-size: 24px;
+  }
+  .landing-header img {
+    height: 100%;
+    width: 25%;
+  }
+  .landing-header h1 {
+    font-size: 6vw;
+  }
+}
+
+/* Create event */
+
+.contain {
+  max-width: 80vw;
+  margin: auto;
+  overflow: hidden;
+  padding: 0 2rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  background-color: #fff;
+}
+
+.large {
+  font-size: 3rem;
+  line-height: 1.2;
+  margin-bottom: 1rem;
+  font-weight: 900;
+  color: #3a3161;
+}
+
+.lead {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.inputField {
+  padding: 1rem 1.75rem;
+  border: none;
+  transition: border 2s;
+  width: 100%;
+  background-color: #fff;
+  background-color: #f2f2f2;
+  border-top: 3px solid transparent;
+  border-bottom: 3px solid transparent;
+}
+
+.form-text {
+  display: block;
+  margin-top: 1.5rem;
+  color: #888;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.inputField:focus {
+  top: -2rem;
+  /* animation-name: example; */
+  /* animation-duration: 3s; */
+  /* animation-iteration-count: 2; */
+  /* animation-direction: alternate; */
+  outline-color: #9789ac;
+  /* animation-timing-function: ease-in-out; */
+  box-shadow: 5px 5px #fb527a;
+}
+
+/* @keyframes example {
+  0% {
+    border: 2px solid #fb527a;
+  }
+  50% {
+    border: 2px solid #fb527a;
+  }
+  100% {
+    border: 2px solid #fb527a;
+  }
+} */
+
+.btn-1 {
+  width: 150px;
+  border-radius: 10px;
+  outline: none;
+  background-color: #3a3161;
+  color: #f8f8f8;
+  border-color: #ffffff;
+  font-weight: 600;
+  font-size: 16px;
+  transition: 0.5s all;
+  margin-right: 2rem;
+  text-align: center;
+}
+
+.btn-1:hover {
+  background-color: #f8f8f8;
+  outline: none;
+  color: #3a3161;
+  border: 1px solid #3a3161;
+}
+
+/* Profile page */
+.main {
+  /* background-color: #f7f7f7; */
+  padding: 4rem 6rem;
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  position: relative;
+  max-width: 100vw;
+}
+
+@media (max-width: 570px) {
+  .main {
+    padding: 4rem 1rem;
+  }
+}
+
+.user-view {
+  background-color: rgba(255, 255, 255, 0.9);
+  max-width: 80rem;
+  margin: 0 auto;
+  min-height: 100vh;
+  border-radius: 5px;
+  overflow: hidden;
+  -webkit-box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.07);
+  box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.07);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.user-view__menu {
+  -webkit-box-flex: 32rem;
+  -ms-flex: 32rem 0 0px;
+  flex: 22rem 0 0;
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right bottom,
+    from(#433468),
+    to(#3c3163)
+  );
+  background-image: linear-gradient(to right bottom, #433468, #3c3163);
+  padding: 4rem 0;
+}
+.user-view__content {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  padding: 5rem 0;
+}
+.user-view__form-container {
+  max-width: 48rem;
+  margin: 0 auto;
+  padding: 0 5rem;
+}
+
+.updateProfile {
+  cursor: pointer;
+}
+
+@media (max-width: 852px) {
+  .main {
+    padding: 3rem 1rem;
+  }
+
+  .user-view__menu {
+    -webkit-box-flex: 13rem;
+    -ms-flex: 13rem 0 0px;
+    flex: 13rem 0 0;
+    padding: 4rem 0;
+  }
+  .user-view__form-container {
+    padding: 0 3rem;
+  }
+  .user-view__content {
+    padding: 5rem 0;
+  }
+}
+
+@media (max-width: 652px) {
+  .main {
+    padding: 3rem 0.5rem;
+  }
+
+  .user-view__menu {
+    -webkit-box-flex: 10rem;
+    -ms-flex: 10rem 0 0px;
+    flex: 10rem 0 0;
+    padding: 3rem 0;
+  }
+
+  .user-view__form-container {
+    padding: 0 1rem;
+  }
+  .user-view__content {
+    padding: 4rem 0;
+  }
+
+  .heading-secondary {
+    font-size: 1.5rem;
+  }
+}
+
+.form__photo-upload {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-size: 1.6rem;
+}
+
+.form__user-photo {
+  height: 7.5rem;
+  width: 7.5rem;
+  border-radius: 50%;
+  /* margin-right: 2rem; */
+  margin: auto;
+}
+
+.form__upload {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+
+.form__upload:focus + label {
+  outline: 3px solid #3a3161;
+  outline-offset: 3px;
+}
+
+.form__upload + label {
+  color: #3a3161;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #3a3161;
+  padding: 3px;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  cursor: pointer;
+}
+.form__upload + label:hover {
+  background-color: #3a3161;
+  color: #fff;
+  -webkit-box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  -webkit-transform: translateY(-2px);
+  transform: translateY(-2px);
+}
+
+.feature {
+  padding: 20px 0px;
+}
+.feature-text {
+  padding: 10px;
+  border: 1px solid #ddd;
+  background: #fff;
+  border-radius: 6px;
+  margin-bottom: 30px;
+  border-left: 6px solid #3a3161;
+  border-right: 6px solid #3a3161;
+  transition: all 0.3s ease-in-out;
+  height: 300px;
+}
+.feature-text:hover {
+  border-top: 6px solid #fb527a;
+  border-bottom: 6px solid #fb527a;
+  border-left: 6px solid #fff;
+  border-right: 6px solid #fff;
+  padding-top: 25px;
+  box-shadow: 0 5px 15px rgb(0 0 0 / 10%);
+  height: 360px;
+}
+.feature-text:hover .dltbtn,
+.feature-text:hover .message {
+  display: block;
+}
+
+.eventimage {
+  height: 160px;
+  margin: 0 auto 0px auto;
+  color: #000;
+  background-color: #fb527a;
+}
+.dltbtn {
+  width: 90px;
+  border-radius: 10px;
+  background-color: #f8f8f8;
+  color: #3a3161;
+  border: 1px solid #3a3161;
+  font-weight: 600;
+  font-size: 16px;
+  transition: 0.5s all;
+  text-align: center;
+  display: none;
+  padding: 0.1rem 0.5rem;
+}
+
+.dltbtn:hover {
+  background-color: #3a3161;
+  color: #f8f8f8;
+  border-color: #ffffff;
+}
+
+.message {
+  display: none;
+}
+
+.slideInLeft {
+  animation-name: slideInLeft;
+}
+.text-center {
+  text-align: center;
+}
+
+.heading {
+  margin-bottom: 59px;
+}
+.text {
+  line-height: 120%;
+}
+.btncreate {
+  width: 160px;
+  height: 40px;
+  border-radius: 10px;
+  background-color: #fb527a;
+  color: #f8f8f8;
+  border: 1px solid #fb527a;
+  font-weight: 600;
+  font-size: 16px;
+  margin-bottom: 10px;
+  margin-top: 20px;
+  margin-left: -1vw;
+  transform: translateX(10%);
+  transition: 0.5s all;
+  text-align: center;
+}
+
+.btncreate:hover {
+  background-color: #fb527a;
+  color: #f8f8f8;
+  border-color: #ffffff;
+}
+.footer-icon {
+  margin: 20px 30px;
+  color: #3a3161;
+}
+
+.footer-icon:hover {
+  color: #fb527a;
+}
+.foo {
+  text-align: center;
+  padding: 4% 15%;
+  border-radius: 25px 25px 0 0;
+}
+.headcards {
+  font-weight: 800;
+  color: #3a3161;
+}
+.logo_create {
+  height: 4rem;
+  margin: 34px -2px -22px 27px;
+}
+
+/* webcam styles */
+
+.webcam-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
+  padding: 10px 0;
+}
+
+.btn-cam {
+  margin-top: 20px;
+  padding: 10px;
+  cursor: pointer;
+  width: 150px;
+  border-radius: 10px;
+  background-color: #f8f8f8;
+  color: #3a3161;
+  border: 1px solid #3a3161;
+  font-weight: 600;
+  font-size: 25px;
+  transition: 0.5s all;
+}
+
+.btn-cam:hover {
+  background-color: #3a3161;
+  color: #f8f8f8;
+  border-color: #ffffff;
+}
+
+.btns {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.wrapper {
+  height: 350px;
+  width: 300px;
+  background-color: #3a3161;
+  position: relative;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  z-index: 0;
+}
+
+.lid {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  border-right: 150px solid transparent;
+  border-bottom: 100px solid transparent;
+  border-left: 150px solid transparent;
+  transform-origin: top;
+  transition: transform 0.25s linear;
+}
+
+/* Lid when closed */
+.lid.one {
+  border-top: 100px solid #3a3161;
+  transform: rotateX(0deg);
+  z-index: 3;
+  transition-delay: 0.75s;
+}
+
+/* Lid when opened */
+.lid.two {
+  border-top: 100px solid #3a3161;
+  transform: rotateX(90deg);
+  z-index: 1;
+  transition-delay: 0.5s;
+}
+
+.envelope {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  border-top: 100px solid transparent;
+  border-right: 150px solid #20bf6b;
+  border-bottom: 100px solid #3a3161;
+  border-left: 150px solid #fb527a;
+  z-index: 3;
+}
+
+.letter {
+  position: absolute;
+  top: 0;
+  width: 90%;
+  height: 90%;
+  background-color: #9789ac;
+  border-radius: 15px;
+  z-index: 2;
+  transition: 0.5s;
+}
+
+.letter p {
+  text-align: center;
+  font-size: 30px;
+  margin-top: 30px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.wrapper:hover .lid.one {
+  transform: rotateX(90deg);
+  transition-delay: 0s;
 }
 
-@keyframes App-logo-spin {
+.wrapper:hover .lid.two {
+  transform: rotateX(180deg);
+  transition-delay: 0.25s;
+}
+
+.wrapper:hover .letter {
+  transform: translateY(-100px);
+  transition-delay: 0.1s;
+}
+
+.wrapper:hover .envelope {
+  transform: translateY(10px);
+  transition-delay: 0.25s;
+}
+/* Backdrop */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 20;
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+.modal1 {
+  position: fixed;
+  top: 20vh;
+  left: 5%;
+  width: 90%;
+  /* background-color: white; */
+  padding: 1rem;
+  border-radius: 14px;
+  display: flex;
+  justify-content: center;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  z-index: 30;
+  animation: slide-down 300ms ease-out forwards;
+}
+
+@media (min-width: 768px) {
+  .modal1 {
+    width: 20rem;
+    left: calc(50% - 10rem);
+  }
+}
+
+@keyframes slide-down {
   from {
-    transform: rotate(0deg);
+    opacity: 0;
+    transform: translateY(-3rem);
   }
   to {
-    transform: rotate(360deg);
+    opacity: 1;
+    transform: translateY(0);
   }
 }
